--- a/style.css
+++ b/style.css
@@ -1,285 +1,300 @@
-@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
+div,
+div:before,
+div:after {
+  display: block;
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+}
+
 body {
-  height: 100%;
-  width: 100%;
-  background: #ea81ae;
-  overflow: hidden;
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
   justify-content: center;
+  align-items: center;
+  background: url(https://i.postimg.cc/RFvH4Fk2/chocolate-183543-1280.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.container {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.glass {
-  height: 350px;
-  width: 200px;
-}
-
-.petals > div {
-  position: absolute;
-  background: #d52d58;
-  width: 45px;
-  height: 80px;
-  top: 55px;
-  transition: all 0.5s ease-out;
-}
-.petals > div:nth-child(1) {
-  border-radius: 15px;
-  box-shadow: 0px 0px 30px #f594b8;
-  left: 80px;
-  top: 60px;
-  background: #d52d58;
-}
-.petals > div:nth-child(2),
-.petals > div:nth-child(4),
-.petals > div:nth-child(6) {
-  background: #b81b43;
-  left: 60px;
-  border-radius: 0px 30px 0px 30px;
-  transform-origin: bottom right;
-}
-.petals > div:nth-child(3),
-.petals > div:nth-child(5),
-.petals > div:nth-child(7) {
-  background: #b81b43;
-  left: 100px;
-  border-radius: 30px 0px 30px 0px;
-  transform-origin: bottom left;
-}
-.petals > div:nth-child(2) {
-  z-index: 5;
-  background: #ab1a3f;
-  top: 75px;
-  height: 70px;
-  box-shadow: 0px 0px 50px rgba(245, 148, 184, 0.5);
-  animation: bloom2 3s ease-in-out;
-  animation-fill-mode: forwards;
-}
-.petals > div:nth-child(3) {
-  z-index: 4;
-  background: #ab1a3f;
-  top: 75px;
-  height: 70px;
-  box-shadow: 0px 0px 50px rgba(245, 148, 184, 0.5);
-  animation: bloom3 3s ease-in-out, glowing 2.5s ease-in-out infinite;
-  animation-fill-mode: forwards;
-}
-.petals > div:nth-child(4) {
-  z-index: 3;
-  background: #b81b43;
-  top: 70px;
-  height: 75px;
-  box-shadow: 0px 0px 50px rgba(245, 148, 184, 0.5);
-  animation: bloom4 3s ease-in-out, glowing 2.5s ease-in-out infinite;
-  animation-fill-mode: forwards;
-}
-.petals > div:nth-child(5) {
-  z-index: 2;
-  background: #b81b43;
-  top: 70px;
-  height: 75px;
-  box-shadow: 0px 0px 50px rgba(245, 148, 184, 0.5);
-  animation: bloom5 3s ease-in-out, glowing 2.5s ease-in-out infinite;
-  animation-fill-mode: forwards;
-}
-.petals > div:nth-child(6) {
-  z-index: 1;
-  background: #c9204b;
-  top: 65px;
-  height: 70px;
-  box-shadow: 0px 0px 50px rgba(245, 148, 184, 0.3);
-  animation: bloom6 3s ease-in-out, glowing 2.5s ease-in-out infinite;
-  animation-fill-mode: forwards;
-}
-.petals > div:nth-child(7) {
-  z-index: 0;
-  background: #c9204b;
-  top: 65px;
-  height: 70px;
-  box-shadow: 0px 0px 50px rgba(245, 148, 184, 0.3);
-  animation: bloom7 3s ease-in-out, glowing 2.5s ease-in-out infinite;
-  animation-fill-mode: forwards;
-}
-
-.deadPetals > div {
-  position: absolute;
-  background: #d52d58;
-  width: 20px;
-  height: 15px;
-  top: 120px;
-  border-radius: 0px 30px 0px 30px;
-  box-shadow: 0px 0px 30px rgba(245, 148, 184, 0.5);
-  transition: all 0.5s ease-out;
-}
-.deadPetals > div:nth-child(1) {
-  left: 80px;
-  transform: rotate(-30deg);
-  animation: falling 10s 4s ease-in-out infinite;
-}
-.deadPetals > div:nth-child(2) {
-  left: 101px;
-  transform: rotate(-30deg);
-  animation: falling 20s 8s ease-in-out infinite;
-}
-.deadPetals > div:nth-child(3) {
-  left: 79px;
-  transform: rotate(-30deg);
-  animation: falling 20s 12s ease-in-out infinite;
-}
-.deadPetals > div:nth-child(4) {
-  left: 92px;
-  transform: rotate(-30deg);
-  animation: falling 20s 16s ease-in-out infinite;
-}
-
-.leaves > div:nth-last-child(1) {
-  position: absolute;
-  width: 55px;
-  height: 30px;
-  background: #338f37;
-  top: 120px;
-  left: 75px;
-  border-radius: 100px;
-}
-.leaves > div:nth-child(1) {
-  position: absolute;
-  width: 6px;
-  height: 210px;
-  background: #054c05;
-  top: 95px;
-  left: 100px;
-  border-radius: 0 0 100px 100px;
-}
-.leaves > div:nth-child(2) {
-  position: absolute;
-  width: 30px;
-  height: 50px;
-  top: 53px;
-  border-radius: 5px 40px 20px 40px;
-  background: #054c05;
-  transform-origin: bottom;
-  transform: rotate(-30deg);
-  top: 180px;
-  left: 80px;
-  box-shadow: inset 5px 5px #066406;
-}
-.leaves > div:nth-child(3) {
-  position: absolute;
-  width: 30px;
-  height: 50px;
-  top: 53px;
-  border-radius: 40px 5px 40px 20px;
-  background: #054c05;
-  transform-origin: bottom;
-  transform: rotate(30deg);
-  top: 150px;
-  left: 95px;
-  box-shadow: inset -5px 5px #066406;
-}
-
-.thorns > div {
-  position: absolute;
-  width: 0;
-  height: 0;
-  top: 140px;
-}
-.thorns > div:nth-child(odd) {
-  border-top: 5px solid transparent;
-  border-bottom: 5px solid transparent;
-  border-left: 5px solid #054c05;
-  left: 105px;
-}
-.thorns > div:nth-child(even) {
-  border-top: 5px solid transparent;
-  border-bottom: 5px solid transparent;
-  border-right: 5px solid #054c05;
-  left: 95px;
-}
-.thorns > div:nth-child(1) {
-  top: 200px;
-}
-.thorns > div:nth-child(2) {
-  top: 170px;
-}
-.thorns > div:nth-child(4) {
-  top: 230px;
-}
-
-@keyframes bloom2 {
-  50% {
-    transform: rotate(-90deg);
-    top: 200px;
-    left: 100px;
-  }
-  100% {
-    transform: rotate(-60deg);
-    top: 252px;
-    left: 50px;
-    background: #71122a;
-    box-shadow: 0px 0px 0px rgba(245, 148, 184, 0);
-  }
-}
-@keyframes bloom3 {
-  100% {
-    transform: rotate(45deg);
-  }
-}
-@keyframes bloom4 {
-  100% {
-    transform: rotate(-20deg);
-  }
-}
-@keyframes bloom5 {
-  100% {
-    transform: rotate(20deg);
-  }
-}
-@keyframes bloom6 {
-  100% {
-    transform: rotate(-5deg);
-  }
-}
-@keyframes bloom7 {
-  100% {
-    transform: rotate(5deg);
-  }
-}
-@keyframes glowing {
-  50% {
-    background: #d7365f;
-    box-shadow: 0px 0px 60px #f594b8;
-  }
-}
-@keyframes falling {
-  20% {
-    top: 335px;
-    background: #9d193b;
-    box-shadow: 0px 0px 0px rgba(245, 148, 184, 0);
-  }
-  100% {
-    top: 335px;
-    opacity: 0;
-  }
-}
-.text {
-  font-family: cursive;
-  font-weight: 800;
-  font-size: 25px;
-  text-align: center;
+div.discontinued {
+  width: 100vmin;
+  height: 100vmin;
+  display: flex;
+  transform: scale(1.2);
+  position: relative;
   justify-content: center;
-  color: rgb(245, 20, 84);
-  text-shadow: 0 0 20px rgb(241, 94, 106);
-  margin-left: -100px;
+  align-items: center;
+  margin: 0 auto;
+  background: radial-gradient(
+        ellipse at 50% 120%,
+        transparent 2.6vmin,
+        #7a311e 2.6vmin,
+        #7a311e 3vmin,
+        transparent 3vmin
+      )
+      calc(-5vmin + 34vmin) calc(-10vmin + 38vmin) / 20vmin 10vmin no-repeat,
+    radial-gradient(
+        ellipse at 50% 120%,
+        transparent 2.6vmin,
+        #7a311e 2.6vmin,
+        #7a311e 3vmin,
+        transparent 3vmin
+      )
+      calc(-5vmin + 54vmin) calc(-10vmin + 38vmin) / 20vmin 10vmin no-repeat,
+    radial-gradient(ellipse, #512014 2vmin, transparent 2vmin)
+      calc(-5vmin + 38vmin) calc(-10vmin + 45vmin) / 12vmin 12vmin no-repeat,
+    radial-gradient(ellipse, #512014 2vmin, transparent 2vmin)
+      calc(-5vmin + 58vmin) calc(-10vmin + 45vmin) / 12vmin 12vmin no-repeat,
+    radial-gradient(ellipse, #d9aa82 2.5vmin, transparent 2.5vmin)
+      calc(-5vmin + 31vmin) calc(-10vmin + 50vmin) / 20vmin 12vmin no-repeat,
+    radial-gradient(ellipse, #d9aa82 2.5vmin, transparent 2.5vmin)
+      calc(-5vmin + 57vmin) calc(-10vmin + 50vmin) / 20vmin 12vmin no-repeat,
+    radial-gradient(ellipse, #f8c2bb 2.5vmin, transparent 2.5vmin)
+      calc(-5vmin + 44vmin) calc(-10vmin + 53vmin) / 20vmin 10vmin no-repeat,
+    radial-gradient(ellipse, #512014 4vmin, transparent 2.5vmin)
+      calc(-5vmin + 44vmin) calc(-10vmin + 46vmin) / 20vmin 20vmin no-repeat,
+    linear-gradient(25deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 27.5vmin) calc(-10vmin + 41vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 32.5vmin) calc(-10vmin + 46vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(25deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 57.5vmin) calc(-10vmin + 31vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 82.5vmin) calc(-10vmin + 46vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(25deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 74vmin) calc(-10vmin + 41vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 82.5vmin) calc(-10vmin + 54vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(25deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 34vmin) calc(-10vmin + 39vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 62.5vmin) calc(-10vmin + 34vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(25deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 54vmin) calc(-10vmin + 36vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(95deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 42.5vmin) calc(-10vmin + 34vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(35deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 37vmin) calc(-10vmin + 35vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 40vmin) calc(-10vmin + 40vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(15deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 47vmin) calc(-10vmin + 35vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 50vmin) calc(-10vmin + 32vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(15deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 67vmin) calc(-10vmin + 35vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 72vmin) calc(-10vmin + 36vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(15deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 78vmin) calc(-10vmin + 50vmin) / 1.5vmin 1vmin no-repeat,
+    linear-gradient(75deg, #bda293 1vmin, transparent 0.5vmin)
+      calc(-5vmin + 84vmin) calc(-10vmin + 60vmin) / 1.5vmin 1vmin no-repeat,
+    radial-gradient(
+        ellipse at 90% 110%,
+        transparent 1.8vmin,
+        #c78f74 1.8vmin,
+        #c78f74 2vmin,
+        transparent 1vmin
+      )
+      calc(-5vmin + 20.5vmin) calc(-10vmin + 42.5vmin) / 6vmin 10vmin no-repeat,
+    radial-gradient(
+        ellipse at 90% 110%,
+        transparent 1.8vmin,
+        #865036 1.8vmin,
+        #865036 2vmin,
+        transparent 1vmin
+      )
+      calc(-5vmin + 16vmin) calc(-10vmin + 48vmin) / 6vmin 10vmin no-repeat,
+    radial-gradient(
+        ellipse at 10% 10%,
+        transparent 1.8vmin,
+        #865036 1.8vmin,
+        #c78f74 2vmin,
+        transparent 1vmin
+      )
+      calc(-5vmin + 24vmin) calc(-10vmin + 54vmin) / 6vmin 10vmin no-repeat,
+    radial-gradient(
+        ellipse at 90% 10%,
+        transparent 1.8vmin,
+        #865036 1.8vmin,
+        #865036 2vmin,
+        transparent 1vmin
+      )
+      calc(-5vmin + 19vmin) calc(-10vmin + 51vmin) / 6vmin 10vmin no-repeat,
+    radial-gradient(
+        ellipse at 20% -20%,
+        transparent 1.5vmin,
+        #c78f74 1.5vmin,
+        #c78f74 1.7vmin,
+        transparent 1.7vmin
+      )
+      calc(-5vmin + 21vmin) calc(-10vmin + 59vmin) / 6vmin 10vmin no-repeat,
+    radial-gradient(
+        ellipse at 20% -20%,
+        transparent 1.5vmin,
+        #865036 1.5vmin,
+        #865036 1.7vmin,
+        transparent 1.7vmin
+      )
+      calc(-5vmin + 26vmin) calc(-10vmin + 52vmin) / 6vmin 10vmin no-repeat,
+    radial-gradient(
+        ellipse at 20% 110%,
+        transparent 1.8vmin,
+        #865036 1.8vmin,
+        #865036 2vmin,
+        transparent 1vmin
+      )
+      calc(-5vmin + 25vmin) calc(-10vmin + 41vmin) / 6vmin 10vmin no-repeat,
+    radial-gradient(ellipse, #fdfdf9 3.2vmin, transparent 1vmin)
+      calc(-5vmin + 22vmin) calc(-10vmin + 44vmin) / 8vmin 15vmin no-repeat,
+    radial-gradient(ellipse, #fdfdf9 4vmin, transparent 1vmin)
+      calc(-5vmin + 19.75vmin) calc(-10vmin + 46.75vmin) / 9vmin 14vmin
+      no-repeat,
+    radial-gradient(ellipse, #fdfdf9 3.25vmin, transparent 1vmin)
+      calc(-5vmin + 17.5vmin) calc(-10vmin + 51vmin) / 9vmin 14vmin no-repeat,
+    radial-gradient(ellipse at 0% 0%, #fdfdf9 4.5vmin, transparent 1vmin)
+      calc(-5vmin + 22vmin) calc(-10vmin + 53vmin) / 5vmin 10vmin no-repeat,
+    radial-gradient(ellipse, #865036 4vmin, transparent 1vmin)
+      calc(-5vmin + 78.75vmin) calc(-10vmin + 51.5vmin) / 12vmin 14vmin
+      no-repeat,
+    radial-gradient(ellipse, #865036 4.5vmin, transparent 1vmin)
+      calc(-5vmin + 73.5vmin) calc(-10vmin + 41.5vmin) / 13vmin 15vmin no-repeat,
+    radial-gradient(ellipse, #865036 4.5vmin, transparent 1vmin)
+      calc(-5vmin + 78vmin) calc(-10vmin + 44.5vmin) / 9vmin 15vmin no-repeat,
+    radial-gradient(ellipse, #865036 4vmin, transparent 1vmin)
+      calc(-5vmin + 73vmin) calc(-10vmin + 40vmin) / 12vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 5vmin, transparent 1vmin)
+      calc(-5vmin + 69vmin) calc(-10vmin + 37.5vmin) / 12vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 3vmin, transparent 1vmin)
+      calc(-5vmin + 71vmin) calc(-10vmin + 35vmin) / 9vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 4vmin, transparent 1vmin)
+      calc(-5vmin + 67vmin) calc(-10vmin + 33.5vmin) / 9vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 4.5vmin, transparent 1vmin)
+      calc(-5vmin + 60vmin) calc(-10vmin + 31vmin) / 15vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 7vmin, transparent 1vmin)
+      calc(-5vmin + 44vmin) calc(-10vmin + 31vmin) / 15vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 6vmin, transparent 1vmin)
+      calc(-5vmin + 54vmin) calc(-10vmin + 30vmin) / 15vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 4.5vmin, transparent 1vmin)
+      calc(-5vmin + 47vmin) calc(-10vmin + 29vmin) / 15vmin 9vmin no-repeat,
+    radial-gradient(ellipse, #865036 3.75vmin, transparent 1vmin)
+      calc(-5vmin + 52vmin) calc(-10vmin + 29.25vmin) / 12vmin 6vmin no-repeat,
+    radial-gradient(ellipse, #865036 3.75vmin, transparent 1vmin)
+      calc(-5vmin + 47vmin) calc(-10vmin + 30vmin) / 11vmin 4vmin no-repeat,
+    radial-gradient(ellipse, #865036 3.75vmin, transparent 1vmin)
+      calc(-5vmin + 43vmin) calc(-10vmin + 31vmin) / 8vmin 4vmin no-repeat,
+    radial-gradient(ellipse at left top, #865036 3.75vmin, transparent 1vmin)
+      calc(-5vmin + 29vmin) calc(-10vmin + 43vmin) / 8vmin 11vmin no-repeat,
+    radial-gradient(ellipse, #865036 4.5vmin, transparent 1vmin)
+      calc(-5vmin + 35vmin) calc(-10vmin + 32vmin) / 10vmin 8vmin no-repeat,
+    radial-gradient(ellipse, #865036 3.5vmin, transparent 1vmin)
+      calc(-5vmin + 38vmin) calc(-10vmin + 31.5vmin) / 10vmin 8vmin no-repeat,
+    radial-gradient(ellipse, #865036 4.5vmin, transparent 1vmin)
+      calc(-5vmin + 34vmin) calc(-10vmin + 36vmin) / 10vmin 8vmin no-repeat,
+    radial-gradient(ellipse, #865036 3.5vmin, transparent 1vmin)
+      calc(-5vmin + 35vmin) calc(-10vmin + 33vmin) / 10vmin 8vmin no-repeat,
+    radial-gradient(ellipse, #865036 3vmin, transparent 1vmin)
+      calc(-5vmin + 32vmin) calc(-10vmin + 36vmin) / 8vmin 10vmin no-repeat,
+    radial-gradient(ellipse at bottom right, #865036 5vmin, transparent 1vmin)
+      calc(-5vmin + 21vmin) calc(-10vmin + 34vmin) / 8vmin 14vmin no-repeat,
+    radial-gradient(ellipse, #865036 4vmin, transparent 1vmin)
+      calc(-5vmin + 27vmin) calc(-10vmin + 38vmin) / 8vmin 14vmin no-repeat,
+    radial-gradient(ellipse at left top, #865036 3vmin, transparent 1vmin)
+      calc(-5vmin + 27vmin) calc(-10vmin + 48vmin) / 6vmin 14vmin no-repeat,
+    radial-gradient(ellipse, #865036 4vmin, transparent 1vmin)
+      calc(-5vmin + 17.5vmin) calc(-10vmin + 44vmin) / 12vmin 18vmin no-repeat,
+    radial-gradient(ellipse at left, #865036 4vmin, transparent 1vmin)
+      calc(-5vmin + 27vmin) calc(-10vmin + 44vmin) / 6vmin 18vmin no-repeat,
+    radial-gradient(ellipse, #865036 4vmin, transparent 1vmin)
+      calc(-5vmin + 16vmin) calc(-10vmin + 49vmin) / 12vmin 18vmin no-repeat,
+    radial-gradient(ellipse at left, #865036 3vmin, transparent 1vmin)
+      calc(-5vmin + 25vmin) calc(-10vmin + 48.5vmin) / 6vmin 18vmin no-repeat,
+    repeating-linear-gradient(
+        80deg,
+        #c78347 0vmin,
+        #c78347 0.5vmin,
+        transparent 0.5vmin,
+        transparent 3vmin
+      )
+      calc(-5vmin + 30vmin) calc(-10vmin + 40vmin) / 17vmin 22vmin no-repeat,
+    repeating-linear-gradient(
+        80deg,
+        #c78347 0vmin,
+        #c78347 0.5vmin,
+        transparent 0.5vmin,
+        transparent 3vmin
+      )
+      calc(-5vmin + 45.25vmin) calc(-10vmin + 36vmin) / 26vmin 26vmin no-repeat,
+    repeating-linear-gradient(
+        -10deg,
+        #c78347 0vmin,
+        #c78347 0.5vmin,
+        transparent 0.5vmin,
+        transparent 3vmin
+      )
+      calc(-5vmin + 30vmin) calc(-10vmin + 40vmin) / 47vmin 22vmin no-repeat,
+    radial-gradient(ellipse at 50% 100%, #cd905b 30vmin, transparent 1vmin)
+      calc(-5vmin + 16vmin) calc(-10vmin + 22vmin) / 80vmin 40vmin no-repeat,
+    radial-gradient(ellipse at 46% 100%, #865036 34vmin, transparent 1vmin)
+      calc(-5vmin + 16vmin) calc(-10vmin + 22vmin) / 80vmin 40vmin no-repeat;
 }
-.text a {
-  color: rgb(245, 20, 84);
+
+div.discontinued:after {
+  width: 100vmin;
+  height: 100vmin;
+  left: -1vmin;
+  text-align: center;
+  z-index: 99;
+  padding-top: 55vmin;
+  font-size: 12vmin;
+  font-weight: 900;
+  transform: scale(1);
+  z-index: 999;
+  color: #74452f;
+  text-shadow: 0 2px 2px #fae385;
+  line-height: 0.9;
+  text-transform: uppercase;
+  white-space: pre-wrap;
+  font-family: "Oswald", sans-serif;
+  content: "FOr My ";
 }
-.text a:hover {
+
+div.discontinued:before {
+  width: 100vmin;
+  height: 100vmin;
+  left: -1vmin;
+  text-align: center;
+  z-index: 99;
+  padding-top: 67vmin;
+  font-size: 7.15vmin;
+  font-weight: 400;
+  transform: scale(1);
+  z-index: 999;
+  color: #a86a33;
+  line-height: 0.9;
+  text-transform: uppercase;
+  white-space: pre-wrap;
+  font-family: "Oswald", sans-serif;
+  content: "Chocolate";
+  text-shadow: 0 2px 2px #ffffff;
+}
+
+.main {
+  color: #ffffff;
+  position: absolute;
+  bottom: 5%;
+  font-weight: 600;
+  font-size: 35px;
+  font-family: "Oswald", sans-serif;
+  text-shadow: 0 2px 2px #512014;
+}
+.main a {
   color: white;
-  text-shadow: 0 0 20px rgb(235, 25, 42);
+  text-shadow: 0 2px 2px #512014;
+}
+.main a:hover {
+  color: rgb(230, 47, 47);
+  text-shadow: 0 2px 2px #ffffff;
 }
